samples/_failures_safe/1761701985_f2cd90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c30bb52e.c: In function ‘main’:
./samples/SAFE/__tmp_c30bb52e.c:136:25: error: missing terminating " character
  136 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_c30bb52e.c:136:9: error: expected expression at end of input
  136 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_c30bb52e.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c30bb52e.c:136:9: error: expected declaration or statement at end of input
